--- a/QgisModelBaker/ui/validator.ui
+++ b/QgisModelBaker/ui/validator.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>834</width>
+    <height>804</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,28 +15,7 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="5" column="0" colspan="2">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QLineEdit" name="validator_config_file_line_edit">
-        <property name="toolTip">
-         <string>ili2db option --validConfig</string>
-        </property>
-        <property name="placeholderText">
-         <string>Validator config file (--validConfig)</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="validator_config_file_tool_button">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="7" column="0" colspan="2">
+    <item row="9" column="0" colspan="2">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="error_count_label">
@@ -115,7 +94,21 @@
       </item>
      </layout>
     </item>
-    <item row="4" column="0" colspan="2">
+    <item row="5" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="export_models_layout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+     </layout>
+    </item>
+    <item row="1" column="0" rowspan="4" colspan="2">
+     <layout class="QVBoxLayout" name="filter_layout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+     </layout>
+    </item>
+    <item row="6" column="0" colspan="2">
      <widget class="QCheckBox" name="skip_geometry_errors_check_box">
       <property name="toolTip">
        <string>Ignores geometry errors (--skipGeometryErrors) and AREA topology validation (--disableAreaValidation)</string>
@@ -125,7 +118,7 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="0" colspan="2">
+    <item row="8" column="0" colspan="2">
      <widget class="QWidget" name="validation_layout" native="true">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <property name="leftMargin">
@@ -164,7 +157,28 @@
       </layout>
      </widget>
     </item>
-    <item row="2" column="0" colspan="2">
+    <item row="7" column="0" colspan="2">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLineEdit" name="validator_config_file_line_edit">
+        <property name="toolTip">
+         <string>ili2db option --validConfig</string>
+        </property>
+        <property name="placeholderText">
+         <string>Validator config file (--validConfig)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="validator_config_file_tool_button">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="0" column="0" colspan="2">
      <widget class="QLabel" name="info_label">
       <property name="text">
        <string/>
@@ -173,13 +187,6 @@
        <bool>true</bool>
       </property>
      </widget>
-    </item>
-    <item row="3" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="filter_layout">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-     </layout>
     </item>
    </layout>
   </widget>
