--- a/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
@@ -54,16 +54,6 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0" colspan="4">
-       <layout class="QVBoxLayout" name="filter_layout">
-        <property name="spacing">
-         <number>0</number>
-        </property>
-       </layout>
-      </item>
-      <item row="0" column="1" colspan="2">
-       <widget class="QLineEdit" name="xtf_file_line_edit"/>
-      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="xtf_file_label">
         <property name="text">
@@ -71,7 +61,10 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="xtf_file_line_edit"/>
+      </item>
+      <item row="0" column="2">
        <widget class="QToolButton" name="xtf_file_browse_button">
         <property name="toolTip">
          <string>Browse XTF files</string>
@@ -81,7 +74,21 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="1" column="0" colspan="3">
+       <layout class="QVBoxLayout" name="filter_layout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+       </layout>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <layout class="QVBoxLayout" name="export_models_layout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+       </layout>
+      </item>
+      <item row="3" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
